--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.flyway.locations=classpath:db/migration
 
 ## api path
 server.servlet.context-path=/api/v1
+
+
+# SWAGGER DOCS
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
