--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=atlas
+server.port=8085
 
 ## DB CONNECTION
-spring.datasource.url=jdbc:postgresql://localhost:5432/atlasdb
+spring.datasource.url=jdbc:postgresql://atlas_db:5432/atlas_db
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
