--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,11 @@
 spring.application.name=atlas
-server.port=8085
-
-## DB CONNECTION
-spring.datasource.url=jdbc:postgresql://atlas_db:5432/atlas_db
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-## JPA
-spring.jpa.hibernate.ddl-auto=validate
-
-# FLYWAY
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-
-## api path
 server.servlet.context-path=/api/v1
 
-
-# SWAGGER DOCS
+# Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.defaultModelsExpandDepth=-1
+
+spring.profiles.active=${SPRING_PROFILES_ACTIVE}
